--- a/pyproject.toml
+++ b/pyproject.toml
@@ -41,22 +41,41 @@ dependencies = [
 ]
 
 [project.optional-dependencies]
+# Modern security analysis tools for 2025
+security = [
+    "yara-python>=4.5.0",        # YARA rule engine for malware detection
+    "volatility3>=2.7.0",        # Memory forensics framework
+    "scapy>=2.5.0",              # Network packet manipulation
+    "pycryptodome>=3.20.0",      # Enhanced cryptographic library
+    "capstone>=5.0.0",           # Disassembly engine
+    "keystone-engine>=0.9.2",    # Assembler framework
+    "unicorn>=2.0.0",            # CPU emulator framework
+    "frida>=16.0.0",             # Dynamic instrumentation toolkit
+]
+# Advanced malware analysis (inspired by CAPA)
+malware-analysis = [
+    "vivisect>=1.0.8",           # Binary analysis platform
+    "pefile>=2023.2.7",          # PE file analysis
+    "pyelftools>=0.31",          # ELF file analysis (correct package name)
+    "oletools>=0.60.2",          # Office document analysis
+    "pyclamd>=0.4.0",            # ClamAV interface (corrected version)
+    "dnspython>=2.6.0",          # DNS analysis
+]
 dev = [
-    # Core testing framework
-    "pytest>=7.4.0",
-    "pytest-cov>=4.1.0",
-    "pytest-mock>=3.11.1",
-    "pytest-qt>=4.2.0",
-    "pytest-xvfb>=3.0.0",
-    "pytest-asyncio>=1.1.0",
-    "pytest-xdist>=3.3.0",  # For parallel test execution
-    "pytest-timeout>=2.1.0",  # For test timeouts
-    # Code quality and linting (modern stack)
-    "ruff>=0.1.0",
-    "mypy>=1.5.0",
-    "black>=23.7.0",
-    # Security and dependency scanning
-    "bandit>=1.7.5",
+    # Core linting and formatting
+    "ruff>=0.2.0",
+    "black>=24.0.0",
+    "isort>=5.13.0",
+    # Type checking
+    "mypy>=1.8.0",
+    # Testing framework
+    "pytest>=8.0.0",
+    "pytest-cov>=4.0.0",
+    "pytest-asyncio>=0.23.0",
+    "pytest-mock>=3.12.0",
+    "pytest-benchmark>=4.0.0",
+    # Security scanning
+    "bandit[toml]>=1.7.5",
     "safety>=2.3.0",
     # Pre-commit and automation
     "pre-commit>=3.3.0",
@@ -105,8 +124,23 @@ xanados-search-destroy = "app.main:main"
 search-and-destroy = "app.main:main"
 
 [build-system]
-requires = ["hatchling"]
+requires = ["hatchling", "hatch-vcs"]
 build-backend = "hatchling.build"
+
+[tool.hatch]
+# Modern Python packaging with Hatch
+version.source = "vcs"
+
+[tool.hatch.build]
+exclude = [
+    "/.github",
+    "/docs",
+    "/tests",
+    "/dev",
+    "/archive",
+    "/logs",
+    "*.log",
+]
 
 # =============================================================================
 # Tool Configuration - Consolidated from multiple config files
@@ -679,20 +713,7 @@ commands =
     sphinx-build -b html docs docs/_build
 """
 
-[tool.hatch]
-# Modern Python packaging with Hatch
-version.source = "vcs"
 
-[tool.hatch.build]
-exclude = [
-    "/.github",
-    "/docs",
-    "/tests",
-    "/dev",
-    "/archive",
-    "/logs",
-    "*.log",
-]
 
 [tool.hatch.build.targets.wheel]
 packages = ["app"]
