--- a/pyproject.toml
+++ b/pyproject.toml
@@ -29,7 +29,7 @@ classifiers = [
 requires-python = ">=3.11"
 dependencies = [
     # Core dependencies from requirements.txt
-    "PyQt6>=6.4.0",
+    "pyqt6>=6.4.0",
     "requests>=2.25.0",
     "psutil>=5.9.0",
     "cryptography>=3.4.0",
@@ -39,12 +39,12 @@ dependencies = [
     "colorama>=0.4.4",
     "tabulate>=0.9.0",
     # Essential runtime dependencies for core functionality
-    "numpy>=1.24.0",             # Required for Unified Security Engine
-    "schedule>=1.2.0",           # Required for scheduled scanning
-    "aiohttp>=3.9.0",            # Required for async operations and web protection
-    "inotify>=0.2.10",           # Required for Linux file system monitoring
-    "dnspython>=2.6.0",          # Required for DNS analysis
-    "python-dotenv>=1.0.0"       # Required for environment configuration
+    "numpy>=1.24.0", # Required for Unified Security Engine
+    "schedule>=1.2.0", # Required for scheduled scanning
+    "aiohttp>=3.9.0", # Required for async operations and web protection
+    "inotify>=0.2.10", # Required for Linux file system monitoring
+    "dnspython>=2.6.0", # Required for DNS analysis # Required for environment configuration
+    "python-dotenv>=1.0.0",
 ]
 
 [project.optional-dependencies]
@@ -939,3 +939,8 @@ make-summary-multi-line = false
 close-quotes-on-newline = false
 force-wrap = false
 tab-width = 4
+
+[dependency-groups]
+dev = [
+    "flake8>=7.3.0",
+]
