--- a/packaging/flatpak/io.github.asafelobotomy.SearchAndDestroy.yml
+++ b/packaging/flatpak/io.github.asafelobotomy.SearchAndDestroy.yml
@@ -1,9 +1,9 @@
 app-id: io.github.asafelobotomy.SearchAndDestroy
 runtime: org.kde.Platform
-runtime-version: "6.7"
+runtime-version: "6.8"
 sdk: org.kde.Sdk
 base: com.riverbankcomputing.PyQt.BaseApp
-base-version: "6.7"
+base-version: "6.8"
 command: search-and-destroy
 cleanup-commands:
   - /app/cleanup-BaseApp.sh
@@ -80,7 +80,7 @@ modules:
   - name: python-dependencies
     buildsystem: simple
     build-commands:
-      - pip3 install --verbose --exists-action=i --prefix=${FLATPAK_DEST} --no-build-isolation "pyclamd" "requests" "python-dotenv" "psutil" "schedule" "dnspython" "markdown"
+      - echo "Skipping additional Python packages - using BaseApp provided packages"
     sources: []
 
   - name: search-and-destroy
@@ -88,7 +88,8 @@ modules:
     build-commands:
       - install -Dm755 packaging/flatpak/search-and-destroy.sh /app/bin/search-and-destroy
       - cp -r app/ /app/lib/search-and-destroy/
-      - install -Dm644 packaging/flatpak/io.github.asafelobotomy.SearchAndDestroy.desktop /app/share/applications/io.github.asafelobotomy.SearchAndDestroy.desktop
+      - install -Dm644 app.desktop /app/share/applications/io.github.asafelobotomy.SearchAndDestroy.desktop
+      - sed -i 's/Exec=search-and-destroy/Exec=python3 \/app\/lib\/search-and-destroy\/main.py/' /app/share/applications/io.github.asafelobotomy.SearchAndDestroy.desktop
       - install -Dm644 packaging/flatpak/io.github.asafelobotomy.SearchAndDestroy.metainfo.xml /app/share/metainfo/io.github.asafelobotomy.SearchAndDestroy.metainfo.xml
       # Install icons
       - install -Dm644 packaging/icons/io.github.asafelobotomy.SearchAndDestroy.svg /app/share/icons/hicolor/scalable/apps/io.github.asafelobotomy.SearchAndDestroy.svg
